--- a/login.html
+++ b/login.html
@@ -102,6 +102,134 @@
             from { opacity: 0; transform: scale(0.9); }
             to { opacity: 1; transform: scale(1); }
         }
+
+        /* Navigation Styles */
+        nav {
+            background-color: #00274D;
+            color: white;
+            padding: 0 1.25rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 130px !important;
+            min-height: 130px !important;
+            padding-top: 0 !important;
+            padding-bottom: 0 !important;
+            position: relative;
+            z-index: 1000;
+        }
+
+        .logo {
+            height: 4.5rem;
+            display: flex;
+            align-items: center;
+            flex-shrink: 0;
+        }
+
+        .logo img {
+            height: 3.2rem;
+            width: auto;
+            max-width: 100%;
+        }
+
+        .main-nav {
+            display: flex;
+            gap: 1.25rem;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            flex-shrink: 0;
+            align-items: center;
+        }
+
+        .main-nav a {
+            text-decoration: none;
+            color: white;
+            font-size: 1.1rem;
+            padding: 1rem 1.5rem;
+            border-radius: 0.4rem;
+            transition: background 0.2s;
+            white-space: nowrap;
+            display: block;
+        }
+
+        .main-nav a:hover, .main-nav a.active {
+            background-color: #003366;
+        }
+
+        /* Mobile Navigation Styles */
+        @media (max-width: 900px) {
+            nav {
+                flex-direction: column;
+                height: auto !important;
+                min-height: auto !important;
+                padding: 0.5rem;
+            }
+
+            .logo {
+                margin-bottom: 0.5rem;
+            }
+
+            .main-nav {
+                width: 100%;
+                overflow-x: auto;
+                overflow-y: hidden;
+                -webkit-overflow-scrolling: touch;
+                padding: 0.5rem 0;
+                justify-content: flex-start;
+                gap: 0.5rem;
+                scrollbar-width: none; /* Firefox */
+                -ms-overflow-style: none; /* IE and Edge */
+            }
+
+            .main-nav::-webkit-scrollbar {
+                display: none; /* Chrome, Safari, Opera */
+            }
+
+            .main-nav li {
+                flex: 0 0 auto;
+            }
+
+            .main-nav a {
+                padding: 0.5rem 1rem;
+                font-size: 0.9rem;
+                white-space: nowrap;
+                background-color: rgba(255, 255, 255, 0.1);
+                border-radius: 20px;
+            }
+
+            .main-nav a.active {
+                background-color: #003366;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .main-nav a {
+                padding: 0.4rem 0.8rem;
+                font-size: 0.85rem;
+            }
+        }
+
+        /* Make the logo bigger in the navigation bar */
+        nav .logo, .logo img {
+            height: 120px !important;
+            max-height: 120px !important;
+            width: auto;
+        }
+
+        @media (max-width: 900px) {
+            nav .logo, .logo img {
+                height: 100px !important;
+                max-height: 100px !important;
+            }
+        }
+
+        @media (max-width: 600px) {
+            nav .logo, .logo img {
+                height: 80px !important;
+                max-height: 80px !important;
+            }
+        }
     </style>
 </head>
 <body>
@@ -213,6 +341,25 @@
         </div>
     </div>
 </div>
+
+<!-- Navigation Bar -->
+<nav>
+    <div class="logo">
+        <img src="../assets/images/sports/logo.jpg" alt="College Sports Hub Logo">
+    </div>
+    <ul class="main-nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="booking.html">Slot Booking</a></li>
+        <li><a href="team.html">Find a Team</a></li>
+        <li><a href="tournaments.html">Tournaments</a></li>
+        <li><a href="rules.html">Rules</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="details.html">Details</a></li>
+        <li><a href="profile.html">My Profile</a></li>
+        <li><a href="#" onclick="logout()">Logout</a></li>
+    </ul>
+</nav>
 
 <script>
     document.addEventListener("DOMContentLoaded", function () {
@@ -436,6 +583,67 @@
         localStorage.removeItem("loggedInUser");
         window.location.href = "login.html";
     }
+
+    document.addEventListener('DOMContentLoaded', function() {
+        // Add active class to current page link
+        const currentPage = window.location.pathname.split('/').pop();
+        const navLinks = document.querySelectorAll('.main-nav a');
+        navLinks.forEach(link => {
+            if (link.getAttribute('href') === currentPage) {
+                link.classList.add('active');
+            }
+        });
+
+        // Add smooth scrolling to navigation
+        const nav = document.querySelector('.main-nav');
+        let isDown = false;
+        let startX;
+        let scrollLeft;
+
+        nav.addEventListener('mousedown', (e) => {
+            isDown = true;
+            nav.style.cursor = 'grabbing';
+            startX = e.pageX - nav.offsetLeft;
+            scrollLeft = nav.scrollLeft;
+        });
+
+        nav.addEventListener('mouseleave', () => {
+            isDown = false;
+            nav.style.cursor = 'grab';
+        });
+
+        nav.addEventListener('mouseup', () => {
+            isDown = false;
+            nav.style.cursor = 'grab';
+        });
+
+        nav.addEventListener('mousemove', (e) => {
+            if (!isDown) return;
+            e.preventDefault();
+            const x = e.pageX - nav.offsetLeft;
+            const walk = (x - startX) * 2;
+            nav.scrollLeft = scrollLeft - walk;
+        });
+
+        // Touch events for mobile
+        nav.addEventListener('touchstart', (e) => {
+            isDown = true;
+            startX = e.touches[0].pageX - nav.offsetLeft;
+            scrollLeft = nav.scrollLeft;
+        });
+
+        nav.addEventListener('touchend', () => {
+            isDown = false;
+        });
+
+        nav.addEventListener('touchmove', (e) => {
+            if (!isDown) return;
+            e.preventDefault();
+            const x = e.touches[0].pageX - nav.offsetLeft;
+            const walk = (x - startX) * 2;
+            nav.scrollLeft = scrollLeft - walk;
+        });
+    });
 </script>
 </body>
 </html>
