--- a/tournaments.html
+++ b/tournaments.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upcoming Tournaments</title>
+    <title>Tournaments - College Sports Hub</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="nav.js"></script>
+    <script>
+        // ... use the same JS as in team.html above ...
+    </script>
     <style>
         :root {
             --primary: #1a237e;
@@ -29,53 +34,135 @@
             line-height: 1.6;
         }
 
-        /* Navigation */
+        /* Navigation Bar */
         nav {
-            background-color: #00274D;
+            background-color: #0a2342;
             color: white;
-            padding: 15px 20px;
+            padding: 0 1rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            height: 90px !important;
+            min-height: 90px !important;
+            border-bottom: 1px solid #e0e6ed;
             position: relative;
             z-index: 1000;
-            overflow-x: auto;
-            min-width: 320px;
+            box-shadow: none;
         }
 
         .logo {
-            height: 100px;
+            height: 60px;
+            width: 60px;
             display: flex;
             align-items: center;
+            justify-content: center;
             flex-shrink: 0;
+            margin-right: 10px;
+            transition: none;
         }
 
         .logo img {
-            height: 100px;
-            width: auto;
+            height: 60px;
+            width: 60px;
+            max-width: 100%;
+            border-radius: 0;
+            object-fit: cover;
         }
 
         .main-nav {
             display: flex;
-            gap: 20px;
+            gap: 0.5rem;
             list-style: none;
             margin: 0;
             padding: 0;
             flex-shrink: 0;
+            align-items: center;
         }
 
         .main-nav a {
             text-decoration: none;
-            color: white;
-            font-size: 16px;
-            padding: 10px 15px;
-            border-radius: 5px;
-            transition: background 0.2s;
+            color: #f4f6fa;
+            font-size: 1rem;
+            padding: 0.7rem 1.1rem;
+            border-radius: 0.2rem;
+            transition: background 0.2s, color 0.2s;
             white-space: nowrap;
+            display: block;
+            position: relative;
+            font-weight: 500;
+            letter-spacing: 0.2px;
         }
 
         .main-nav a:hover {
-            background-color: darkblue;
+            background-color: #17335c;
+            color: #e0e6ed;
+            box-shadow: none;
+            transform: none;
+        }
+
+        .main-nav a.active {
+            background-color: #17335c;
+            color: #e0e6ed;
+            box-shadow: none;
+        }
+
+        .main-nav a.active::after {
+            display: none;
+        }
+
+        @media (max-width: 900px) {
+            nav {
+                flex-direction: column;
+                height: auto !important;
+                min-height: auto !important;
+                padding: 0.5rem;
+            }
+            .logo {
+                margin-bottom: 0.5rem;
+            }
+            .main-nav {
+                width: 100%;
+                overflow-x: auto;
+                overflow-y: hidden;
+                -webkit-overflow-scrolling: touch;
+                padding: 0.5rem 0;
+                justify-content: flex-start;
+                gap: 0.2rem;
+                scrollbar-width: none; /* Firefox */
+                -ms-overflow-style: none; /* IE and Edge */
+            }
+            .main-nav::-webkit-scrollbar {
+                display: none; /* Chrome, Safari, Opera */
+            }
+            .main-nav li {
+                flex: 0 0 auto;
+            }
+            .main-nav a {
+                padding: 0.5rem 0.8rem;
+                font-size: 0.95rem;
+                background-color: transparent;
+                border-radius: 12px;
+            }
+            .main-nav a:hover, .main-nav a.active {
+                background-color: #17335c;
+                color: #e0e6ed;
+            }
+        }
+        @media (max-width: 480px) {
+            .main-nav a {
+                padding: 0.3rem 0.5rem;
+                font-size: 0.85rem;
+            }
+        }
+        #nav-backdrop {
+            display: none;
+            position: fixed;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: rgba(0,0,0,0.3);
+            z-index: 1099;
+        }
+        #nav-backdrop.active {
+            display: block;
         }
 
         /* Main Content */
@@ -536,295 +623,26 @@
         }
     </style>
 </head>
-<body onload="loadTournaments()">
-    <style>
-   
-    /* Navigation Bar */
-    nav {
-        background-color: #00274D;
-        color: white;
-        padding: 15px 20px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        position: relative;
-        z-index: 1000;
-    }
-
-    .logo img {
-        height: 100px;
-    }
-
-    /* Main Navigation Links */
-    .main-nav {
-        display: flex;
-        gap: 20px;
-        list-style: none;
-    }
-
-    .main-nav a {
-        text-decoration: none;
-        color: white;
-        font-size: 16px;
-        padding: 10px 15px;
-        border-radius: 5px;
-    }
-
-    .main-nav a:hover {
-        background-color: darkblue;
-    }
-
-    /* Hamburger Menu */
-    .hamburger {
-        display: flex;
-        flex-direction: column;
-        gap: 6px;
-        cursor: pointer;
-    }
-
-    .hamburger div {
-        width: 30px;
-        height: 4px;
-        background: white;
-        transition: 0.3s;
-    }
-
-    .hamburger-menu {
-        display: none;
-        position: absolute;
-        top: 70px;
-        right: 20px;
-        background: navy;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        border-radius: 5px;
-        z-index: 999;
-    }
-
-    .hamburger-menu.active {
-        display: block;
-    }
-
-    .hamburger-menu a {
-        display: block;
-        padding: 15px 20px;
-        color: white;
-        text-decoration: none;
-        transition: 0.3s;
-    }
-
-    .hamburger-menu a:hover {
-        background: rgb(163, 13, 103);
-    }
-
-    /* Section Styling */
-    .section-container {
-        background: rgba(255, 255, 255, 0.9);
-        color: black;
-        padding: 40px;
-        margin: 50px auto;
-        width: 80%;
-        border-radius: 10px;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-        text-align: justify;
-    }
-
-    .section-container h2 {
-        color: blue;
-        text-align: center;
-        margin-bottom: 20px;
-    }
-
-    .section-container img {
-        width: 100%;
-        max-width: 600px;
-        border-radius: 10px;
-        display: block;
-        margin: 20px auto;
-    }
-
-    .section-container p {
-        font-size: 18px;
-        margin-bottom: 20px;
-    }
-
-    @media (max-width: 768px) {
-        .main-nav {
-            display: none; /* Hide main nav links on smaller screens */
-        }
-
-        .hamburger-menu {
-            width: 100%;
-            left: 0;
-            top: 60px;
-        }
-    }
-
-    /* Footer */
-    footer {
-        background: navy;
-        color: white;
-        padding: 15px;
-        text-align: center;
-        margin-top: 30px;
-    }
-</style>
-</head>
 <body onload="checkLogin()">
+    <!-- Navigation Bar -->
+    <nav>
+        <div class="logo">
+            <img src="../assets/images/sports/logo.jpg" alt="College Sports Hub Logo">
+        </div>
+        <ul class="main-nav" id="mainNav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="booking.html">Slot Booking</a></li>
+            <li><a href="team.html">Find a Team</a></li>
+            <li><a href="tournaments.html" class="active">Tournaments</a></li>
+            <li><a href="rules.html">Rules</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="details.html">Details</a></li>
+            <li><a href="#" onclick="logout()" id="logoutNav">Logout</a></li>
+        </ul>
+    </nav>
+    <div id="nav-backdrop"></div>
 
-<!-- Navigation Bar -->
-<nav>
-    <div class="logo"><img src="logo.jpg" alt="College Sports Hub Logo"></div>
-    <div class="hamburger" id="hamburgerBtn" onclick="toggleMenu(event)">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-    <ul class="main-nav" id="mainNav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="booking.html">Slot Booking</a></li>
-        <li><a href="team.html">Find a Team</a></li>
-        <li><a href="tournaments.html" class="active">Tournaments</a></li>
-        <li><a href="rules.html">Rules</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="details.html">Details</a></li>
-        <li><a href="#" onclick="logout()">Logout</a></li>
-    </ul>
-</nav>
-<div id="nav-backdrop" onclick="closeMenu()"></div>
-
-<style>
-nav {
-    background-color: #00274D;
-    color: white;
-    padding: 15px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    z-index: 1000;
-}
-.logo {
-    height: 70px;
-    display: flex;
-    align-items: center;
-    flex-shrink: 0;
-}
-.logo img {
-    height: 70px;
-    width: auto;
-}
-.main-nav {
-    display: flex;
-    gap: 20px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    flex-shrink: 0;
-    transition: max-height 0.3s, opacity 0.3s;
-}
-.main-nav a {
-    text-decoration: none;
-    color: white;
-    font-size: 16px;
-    padding: 14px 20px;
-    border-radius: 5px;
-    transition: background 0.2s;
-    white-space: nowrap;
-    display: block;
-}
-.main-nav a:hover {
-    background-color: darkblue;
-}
-.hamburger {
-    display: none;
-    flex-direction: column;
-    gap: 6px;
-    cursor: pointer;
-    margin-left: 20px;
-    width: 44px;
-    height: 44px;
-    justify-content: center;
-    align-items: center;
-    z-index: 1100;
-}
-.hamburger span {
-    display: block;
-    width: 32px;
-    height: 4px;
-    background: white;
-    border-radius: 2px;
-    transition: 0.3s;
-}
-@media (max-width: 900px) {
-    nav {
-        flex-wrap: wrap;
-    }
-    .main-nav {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        right: 0;
-        background: #00274D;
-        flex-direction: column;
-        width: 100vw;
-        gap: 0;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-        display: none;
-        max-height: 0;
-        opacity: 0;
-        overflow: hidden;
-    }
-    .main-nav.active {
-        display: flex;
-        max-height: 500px;
-        opacity: 1;
-    }
-    .main-nav li {
-        width: 100%;
-    }
-    .main-nav a {
-        display: block;
-        padding: 18px 24px;
-        border-radius: 0;
-        border-bottom: 1px solid rgba(255,255,255,0.08);
-        font-size: 18px;
-    }
-    .hamburger {
-        display: flex;
-    }
-}
-#nav-backdrop {
-    display: none;
-    position: fixed;
-    top: 0; left: 0; right: 0; bottom: 0;
-    background: rgba(0,0,0,0.3);
-    z-index: 1099;
-}
-#nav-backdrop.active {
-    display: block;
-}
-</style>
-<script>
-function toggleMenu(e) {
-    e.stopPropagation();
-    document.getElementById('mainNav').classList.toggle('active');
-    document.getElementById('nav-backdrop').classList.toggle('active');
-}
-function closeMenu() {
-    document.getElementById('mainNav').classList.remove('active');
-    document.getElementById('nav-backdrop').classList.remove('active');
-}
-document.querySelectorAll('.main-nav a').forEach(link => {
-    link.addEventListener('click', closeMenu);
-});
-window.addEventListener('resize', function() {
-    if(window.innerWidth > 900) closeMenu();
-});
-window.addEventListener('scroll', closeMenu);
-</script>
-   
-    <!-- Main Content -->
     <!-- Main Content -->
     <div class="container">
         <h1>Upcoming Tournaments</h1>
@@ -1041,14 +859,8 @@ window.addEventListener('scroll', closeMenu);
             if (!user) {
                 window.location.href = "login.html";
             } else {
-                document.getElementById("logoutNav").style.display = "block";
+                // document.getElementById("logoutNav").style.display = "block";
             }
-        }
-        
-        // Toggle mobile menu
-        function toggleMenu() {
-            const menu = document.querySelector(".hamburger-menu");
-            menu.classList.toggle("active");
         }
         
         // Logout function
