--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
     <!-- About Us Section -->
     <div class="section-container">
         <h2>About Us</h2>
-        <img src="../assets/images/sports/trophies.jpg"" alt="About Us">
+        <img src="../assets/images/sports/trophies.jpg" alt="About Us">
         <p>Learn about our mission to provide seamless sports booking experiences for students and sports enthusiasts.</p>
         <a href="about.html" class="btn">Learn More</a>
     </div>
@@ -519,7 +519,7 @@
     <!-- Find a Team Section -->
     <div class="section-container">
         <h2>Find a Team</h2>
-        <img src="../assets/images/sports/badmintion.jpeg" alt="Find a Team">
+        <img src="../assets/images/sports/badmintion.jpg" alt="Find a Team">
         <p>Looking for a badminton partner? Connect with other players and form your perfect team.</p>
         <a href="team.html" class="btn">Find Players</a>
     </div>
@@ -527,7 +527,7 @@
     <!-- Upcoming Tournaments Section -->
     <div class="section-container">
         <h2>Upcoming Tournaments</h2>
-        <img src="../assets/images/sports/badmin 2.jpeg" alt="Upcoming Tournaments">
+        <img src="../assets/images/sports/badmin 2.jpg" alt="Upcoming Tournaments">
         <p>Stay updated on college and external badminton tournaments. Participate and showcase your skills!</p>
         <a href="tournaments.html" class="btn">View Tournaments</a>
     </div>
