--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
     <!-- Find a Team Section -->
     <div class="section-container">
         <h2>Find a Team</h2>
-        <img src="../assets/images/sports/badmintion.jpg" alt="Find a Team">
+        <img src="../assets/images/sports/badmintion.jpeg" alt="Find a Team">
         <p>Looking for a badminton partner? Connect with other players and form your perfect team.</p>
         <a href="team.html" class="btn">Find Players</a>
     </div>
