--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
     <!-- Navigation Section -->
     <nav>
         <div class="logo">
-            <img src="../assets/images/sports/logo.jpg" alt="College Sports Hub Logo">
+            <img src="logo.jpg" alt="College Sports Hub Logo">
         </div>
         <ul class="main-nav" id="mainNav">
             <li><a href="index.html" class="active">Home</a></li>
@@ -503,7 +503,7 @@
     <!-- About Us Section -->
     <div class="section-container">
         <h2>About Us</h2>
-        <img src="../assets/images/sports/trophies.jpg" alt="About Us">
+        <img src="trophies.jpg" alt="About Us">
         <p>Learn about our mission to provide seamless sports booking experiences for students and sports enthusiasts.</p>
         <a href="about.html" class="btn">Learn More</a>
     </div>
@@ -511,7 +511,7 @@
     <!-- Slot Booking Section -->
     <div class="section-container">
         <h2>Slot Booking</h2>
-        <img src="../assets/images/sports/book my slot.png" alt="Slot Booking">
+        <img src="book my slot.png" alt="Slot Booking">
         <p>Reserve your badminton court in advance and secure your game time without any hassle.</p>
         <a href="booking.html" class="btn">Book Now</a>
     </div>
@@ -519,7 +519,7 @@
     <!-- Find a Team Section -->
     <div class="section-container">
         <h2>Find a Team</h2>
-        <img src="../assets/images/sports/badmintion.jpeg" alt="Find a Team">
+        <img src="badmintion.jpeg" alt="Find a Team">
         <p>Looking for a badminton partner? Connect with other players and form your perfect team.</p>
         <a href="team.html" class="btn">Find Players</a>
     </div>
@@ -527,7 +527,7 @@
     <!-- Upcoming Tournaments Section -->
     <div class="section-container">
         <h2>Upcoming Tournaments</h2>
-        <img src="../assets/images/sports/badmin 2.jpg" alt="Upcoming Tournaments">
+        <img src="badmin 2.jpg" alt="Upcoming Tournaments">
         <p>Stay updated on college and external badminton tournaments. Participate and showcase your skills!</p>
         <a href="tournaments.html" class="btn">View Tournaments</a>
     </div>
@@ -535,7 +535,7 @@
     <!-- Rules and Regulations Section -->
     <div class="section-container">
         <h2>Rules and Regulations</h2>
-        <img src="../assets/images/sports/rules.png" alt="rules">
+        <img src="rules.png" alt="rules">
         <p>Follow the Rules and Regulations of the badminton court. Click on view rules to know the rules.</p>
         <a href="rules.html" class="btn">View Rules</a>
     </div>
