--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
     <!-- Upcoming Tournaments Section -->
     <div class="section-container">
         <h2>Upcoming Tournaments</h2>
-        <img src="badmin 2.jpg" alt="Upcoming Tournaments">
+        <img src="badmin 2.jpeg" alt="Upcoming Tournaments">
         <p>Stay updated on college and external badminton tournaments. Participate and showcase your skills!</p>
         <a href="tournaments.html" class="btn">View Tournaments</a>
     </div>
