--- a/team.html
+++ b/team.html
@@ -515,7 +515,7 @@
 <!-- Navigation Bar -->
 <nav>
     <div class="logo">
-        <img src="../assets/images/sports/logo.jpg" alt="College Sports Hub Logo">
+        <img src="logo.jpg" alt="College Sports Hub Logo">
     </div>
     <ul class="main-nav" id="mainNav">
         <li><a href="index.html">Home</a></li>
