--- a/rules.html
+++ b/rules.html
@@ -388,7 +388,7 @@
 <body onload="checkLogin()">
 <nav>
     <div class="logo">
-        <img src="../assets/images/sports/logo.jpg" alt="College Sports Hub Logo">
+        <img src="logo.jpg" alt="College Sports Hub Logo">
     </div>
     <ul class="main-nav" id="mainNav">
         <li><a href="index.html">Home</a></li>
