--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Sports Booking System</title>
     <link rel="stylesheet" href="styles.css">
     <script src="nav.js"></script>
@@ -63,6 +63,15 @@
             background-size: cover;
             text-align: center;
             color: white;
+            min-height: 100vh;
+            overflow-y: auto;
+        }
+
+        html, body {
+            overflow-x: hidden;
+            width: 100%;
+            position: relative;
+            -webkit-overflow-scrolling: touch;
         }
 
         /* Navigation Bar */
@@ -107,6 +116,8 @@
             padding: 0;
             flex-shrink: 0;
             align-items: center;
+            -webkit-overflow-scrolling: touch;
+            touch-action: pan-x;
         }
 
         .main-nav a {
@@ -175,19 +186,10 @@
             }
 
             .main-nav {
-                width: 100%;
+                touch-action: pan-x;
+                -webkit-overflow-scrolling: touch;
                 overflow-x: auto;
                 overflow-y: hidden;
-                -webkit-overflow-scrolling: touch;
-                padding: 0.5rem 0;
-                justify-content: flex-start;
-                gap: 0.2rem;
-                scrollbar-width: none; /* Firefox */
-                -ms-overflow-style: none; /* IE and Edge */
-            }
-
-            .main-nav::-webkit-scrollbar {
-                display: none; /* Chrome, Safari, Opera */
             }
 
             .main-nav li {
