--- a/index.html
+++ b/index.html
@@ -54,7 +54,22 @@
 
     <!-- Styles -->
     <style>
-        /* General Styles */
+        /* Reset and base styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            -webkit-tap-highlight-color: transparent;
+        }
+
+        html, body {
+            width: 100%;
+            height: 100%;
+            overflow-x: hidden;
+            position: relative;
+            -webkit-overflow-scrolling: touch;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -67,14 +82,7 @@
             overflow-y: auto;
         }
 
-        html, body {
-            overflow-x: hidden;
-            width: 100%;
-            position: relative;
-            -webkit-overflow-scrolling: touch;
-        }
-
-        /* Navigation Bar */
+        /* Navigation styles */
         nav {
             background-color: #0a2342;
             color: white;
@@ -85,7 +93,10 @@
             height: 90px !important;
             min-height: 90px !important;
             border-bottom: 1px solid #e0e6ed;
-            position: relative;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
             z-index: 1000;
             box-shadow: none;
         }
@@ -186,26 +197,33 @@
             }
 
             .main-nav {
-                touch-action: pan-x;
-                -webkit-overflow-scrolling: touch;
+                width: 100%;
                 overflow-x: auto;
                 overflow-y: hidden;
+                -webkit-overflow-scrolling: touch;
+                touch-action: pan-x;
+                padding: 0.5rem 0;
+                justify-content: flex-start;
+                gap: 0.2rem;
+                scrollbar-width: none;
+                -ms-overflow-style: none;
+                white-space: nowrap;
+            }
+
+            .main-nav::-webkit-scrollbar {
+                display: none;
             }
 
             .main-nav li {
                 flex: 0 0 auto;
+                display: inline-block;
             }
 
             .main-nav a {
                 padding: 0.5rem 0.8rem;
                 font-size: 0.95rem;
-                background-color: transparent;
-                border-radius: 12px;
-            }
-
-            .main-nav a:hover, .main-nav a.active {
-                background-color: #17335c;
-                color: #e0e6ed;
+                white-space: nowrap;
+                display: inline-block;
             }
         }
 
